--- a/backend/env/.env
+++ b/backend/env/.env
@@ -5,7 +5,7 @@ DATABASE_URL=postgres://postgres:password@db-postgres:5432/postgres
 
 DEBUG=1
 SECRET_KEY=django-insecure-ye9^i&m__*92n$veag$^jn3kkh9$3dh=ml_x9ab^-%#(p_vl2#
-DJANGO_ALLOWED_HOSTS='backend localhost 127.0.0.1'
+DJANGO_ALLOWED_HOSTS='backend localhost 127.0.0.1 3.72.24.215'
 
 DJANGO_SU_NAME=testAdmin
 DJANGO_SU_EMAIL=teastAdmin@aa.pl
